Fixed flickering of navbar

--- a/src/sass/components/_navbar.scss
+++ b/src/sass/components/_navbar.scss
@@ -66,6 +66,10 @@
                         transform: translateX(-50%);
                         transition: width 0.15s ease-in-out, color 0.15s ease-in-out;
                     }
+                    
+                    span {
+                        display: none;
+                    }
                 }
             }
         }
@@ -121,6 +125,22 @@
     @media screen and (min-width: 56em) and (min-height: 36em) {
         .header-logo {
             width: 50%;
+        }
+
+        .main-nav {
+            ul {
+                li {
+                    a {
+                        span {
+                            display: block;
+                        }
+
+                        svg {
+                            display: none;
+                        }
+                    }
+                }
+            }
         }
     }
 }
